sunshine_server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sunshine-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 10s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 10s
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
      - staging-sunshine.acme.universe
    secretName: stageai-tls
  rules:
    - host: prod-sunshine.acme.universe
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: sunshine
                port:
                  number: 80
          - path: /(openapi.json)
            pathType: Prefix
            backend:
              service:
                name: sunshine
                port:
                  number: 80
          - path: /openapi
            pathType: Prefix
            backend:
              service:
                name: openapi
                port:
                  number: 80
          - path: /(redoc.standalone.js)
            pathType: Prefix
            backend:
              service:
                name: openapi
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: sunshine-react
                port:
                  number: 80
